--- a/12345678.html
+++ b/12345678.html
@@ -117,11 +117,43 @@ They will help you compare products and services. In addition they wil help you 
             <div class="col-md-8 col-lg-8">
 				<h1 class="title"> Subscription 1 - €15,99 </h1>
 				<header class="subtext">
-                <h1 class="subtext">joejoe</h1>
+                			<h1 class="subtext">
+						<ul>
+							<ol> Weekly general advise </ol>
+							<ol> Two group meetings a month with a professional </ol> 
+							<ol> Access to the website </ol> 
+							
+						</ul>
+					</h1>
 				</header>
             </div>
             <div class="col-md-4 col-lg-4">
-				<header class="first"><a href="12345.html" target="_blank"><br><img class="img-fluid" src="images/expert.jpg" alt="" width="600" height="400"></a></header>                
+				<header class="first"><br><img class="img-fluid" src="images/sub1.jpeg" alt="" width="600" height="400"></header>                
+            </div>
+			<div class="col-md-12 col-lg-12"> <br>
+		</div>
+		</div>
+		</div>
+		</div>
+		<div class="box">
+		<div class="container">
+        <div class="row">
+            <div class="col-md-8 col-lg-8">
+				<h1 class="title"> Subscription 2 - €29,99 </h1>
+				<header class="subtext">
+                			<h1 class="subtext">
+						<ul>
+							<ol> Weekly general advise </ol>
+							<ol> Two group meetings a month with a professional </ol> 
+							<ol> Access to the website </ol> 
+							<ol> Two personalised chats with an expert per month</ol> 
+							
+						</ul>
+					</h1>
+				</header>
+            </div>
+            <div class="col-md-4 col-lg-4">
+				<header class="first"><br><img class="img-fluid" src="images/sub2.jpeg" alt="" width="600" height="400"></header>                
             </div>
 			<div class="col-md-12 col-lg-12"> <br>
 		</div>
