--- a/12345678.html
+++ b/12345678.html
@@ -35,7 +35,7 @@
 								</li>
 								<li class="nav-item">
 										<h1 class="my-class">
-											<a class="nav-link" href="123456.html">Home</a>
+											<a class="nav-link" href="123456.html">Homeware</a>
 									</h1>
 								</li>
 								<li class="nav-item">
