--- a/12345.html
+++ b/12345.html
@@ -183,7 +183,7 @@ Choose here your perfect sustainable garment with your chosen budget!
 		</div>
 	<footer class="endtext">
  			Follow us on
-			<a href="https://www.instagram.com/nexthiveofficial/" target="_blank">Instagram</a> and <a href="https://www.facebook.com/NEXT-HIVE-100381428820716" target="_blank">FaceBook</a>
+				<a href="https://www.instagram.com/nexthiveofficial/" target="_blank"><img class="img-fluid" src="images/ig.png" alt="" width="30" height="30"></a> and <a href="https://www.facebook.com/NEXT-HIVE-100381428820716" target="_blank"><img class="img-fluid" src="images/facebook.png" alt="" width="30" height="30"></a>
  	</footer>
 	</main>
 	</body>
