--- a/12345.html
+++ b/12345.html
@@ -37,7 +37,7 @@
 								</li>
 								<li class="nav-item">
 										<h1 class="my-class">
-											<a class="nav-link" href="123456.html">Homeware</a>
+											<a class="nav-link" href="123456.html">Home Supplies</a>
 									</h1>
 								</li>
 								<li class="nav-item">
