--- a/12345.html
+++ b/12345.html
@@ -67,20 +67,24 @@
 		<div class="col-md-12 col-lg-12"><br></div>
 		<div class="col-md-12 col-lg-12">
 		<h3> Clothing </h3> 
-		<h5> Sustainable clothes are the future. But unfortunately, it isn’t easy to find, especially sustainable clothes with an affordable price. But luckily an improvement is visible. In recent years consumers have become increasingly aware of the environmental impact of their shopping habits. Sustainable fashion has been catching up with fast fashion, which is notorious for its contributions to pollution, climate change, and unethical labor practices. 
-
-Choose here your perfect sustainable garment with your chosen budget!  
- </h5>
+		<h5> Sustainable clothes are the future. But unfortunately, it isn’t easy to find, especially sustainable clothes with an affordable price. But luckily an improvement is visible. In recent years consumers have become increasingly aware of the environmental impact of their shopping habits. Sustainable fashion has been catching up with fast fashion, which is notorious for its contributions to pollution, climate change, and unethical labor practices. Choose here your perfect sustainable garment with your chosen budget!  
+ 		</h5>
 		</div>
 		</header>
+		<div class="the-container">
+		<div class="container">
+        <div class="row"> 
+			<div class="col-md-12 col-lg-12">
+				<h1>Jeans</h1>
+			</div>
+		</div>
+		</div>
+		</div>
 		<div class="col-md-12 col-lg-12"><br></div>
 		<div class="my-container">
 		<div class="container">
-        <div class="row">
-            <div class="col-md-3 col-lg-3">
-				<h1 class="colortitle">Jeans</h1>
-			</div>
-			<div class="col-md-3 col-lg-3">
+        <div class="row">            
+			<div class="col-md-4 col-lg-4">
 			<article class="green">
 				<h3>€5-€25</h3>
 				<h5>Vinted</h5>
@@ -89,14 +93,14 @@ Choose here your perfect sustainable garment with your chosen budget!
 			
 			</article>
 			</div>		
-			<div class="col-md-3 col-lg-3">
+			<div class="col-md-4 col-lg-4">
 			<article class="green">
 				<h3>€25-€50</h3>
 				<h5>NA-KD</h5>
 				<h4> <a href="https://www.na-kd.com/nl/zoek-producten/organisch-rechte-high-waist-jeans-blauw-9?utm_source=google&utm_medium=cpc&utm_campaign=NL_%7Bifmobile:MB%7D%7Bifnotmobile:DT%7D_SEA_GGL_SHP_ALL_NBR_X_X_X_a*499-802-0213_c*%7Bcampaignname%7D_g*%7Badgroupname%7D_k*1660-000122-0003-582&dfw_tracker=30165-782678&gclid=CjwKCAjwxuuCBhATEiwAIIIz0dEV5BDsf4oUTEFxxX3gyxkLYBjpkLnBEbx2jr6ltOd6Kp_P3qIhtBoCnfoQAvD_BwE" target="_blank"> <img class="img-fluid" src="images/jeans2.png" alt="" width="300" height="600"> </a> </h4>
 			</article>
 			</div>
-			<div class="col-md-3 col-lg-3">
+			<div class="col-md-4 col-lg-4">
 			<article class="green">
 				<h3> €50+ </h3>
 				<h5>KOTN</h5>
