--- a/12345.html
+++ b/12345.html
@@ -70,8 +70,8 @@
 		<div class="container">
         <div class="row">
 			<h3> Clothing </h3> 
-			<h5> Sustainable clothes are the future. But unfortunately, it isn’t easy to find, especially sustainable clothes with an affordable price. But luckily an improvement is visible. In recent years consumers have become increasingly aware of the environmental impact of their shopping habits. Sustainable fashion has been catching up with fast fashion, which is notorious for its contributions to pollution, climate change, and unethical labor practices. Choose here your perfect sustainable garment with your chosen budget!  
- 			</h5>
+			<h4> Sustainable clothes are the future. But unfortunately, it isn’t easy to find, especially sustainable clothes with an affordable price. But luckily an improvement is visible. In recent years consumers have become increasingly aware of the environmental impact of their shopping habits. Sustainable fashion has been catching up with fast fashion, which is notorious for its contributions to pollution, climate change, and unethical labor practices. Choose here your perfect sustainable garment with your chosen budget!  
+ 			</h4>
 		</div>
 		</div>
 		</div>
@@ -95,7 +95,7 @@
 			<div class="col-md-4 col-lg-4">
 			<article class="green">
 				<h3>€5-€25</h3>
-				<h4> <a href="https://www.vinted.nl/vetements?search_text=sustainable%20jeans/" target="_blank"> <img class="img-fluid" src="images/jeans1.png" alt="" width="400" height="200"></a> </h4>
+				<a href="https://www.vinted.nl/vetements?search_text=sustainable%20jeans/" target="_blank"> <img class="img-fluid" src="images/jeans1.png" alt="" width="400" height="200"></a>
 				<h5>Vinted</h5>
 				<h4> A second-hand fashion community of more than 37 million members. Give pre-loved fashion a second life and make money selling items you no longer wear.</h4>
 				
@@ -106,7 +106,7 @@
 			<div class="col-md-4 col-lg-4">
 			<article class="green">
 				<h3>€25-€50</h3>
-				<h4> <a href="https://www.na-kd.com/nl/zoek-producten/organisch-rechte-high-waist-jeans-blauw-9?utm_source=google&utm_medium=cpc&utm_campaign=NL_%7Bifmobile:MB%7D%7Bifnotmobile:DT%7D_SEA_GGL_SHP_ALL_NBR_X_X_X_a*499-802-0213_c*%7Bcampaignname%7D_g*%7Badgroupname%7D_k*1660-000122-0003-582&dfw_tracker=30165-782678&gclid=CjwKCAjwxuuCBhATEiwAIIIz0dEV5BDsf4oUTEFxxX3gyxkLYBjpkLnBEbx2jr6ltOd6Kp_P3qIhtBoCnfoQAvD_BwE" target="_blank"> <img class="img-fluid" src="images/jeans2.png" alt="" width="300" height="600"> </a> </h4>
+				<a href="https://www.na-kd.com/nl/zoek-producten/organisch-rechte-high-waist-jeans-blauw-9?utm_source=google&utm_medium=cpc&utm_campaign=NL_%7Bifmobile:MB%7D%7Bifnotmobile:DT%7D_SEA_GGL_SHP_ALL_NBR_X_X_X_a*499-802-0213_c*%7Bcampaignname%7D_g*%7Badgroupname%7D_k*1660-000122-0003-582&dfw_tracker=30165-782678&gclid=CjwKCAjwxuuCBhATEiwAIIIz0dEV5BDsf4oUTEFxxX3gyxkLYBjpkLnBEbx2jr6ltOd6Kp_P3qIhtBoCnfoQAvD_BwE" target="_blank"> <img class="img-fluid" src="images/jeans2.png" alt="" width="300" height="600"> </a>
 				<h5>NA-KD</h5>
 				<h4> Na-kd has their new collection which all revolves about sustainability. This collection is made with care and love for our planet and people.
 				</h4>
@@ -115,8 +115,7 @@
 			<div class="col-md-4 col-lg-4">
 			<article class="green">
 				<h3> €50+ </h3>
-				
-				<h4> <a href="https://kotn.com/collections/womens-bottoms" target="_blank"> <img class="img-fluid" src="images/jeans3.png" alt="" width="300" height="600"> </a> </h4>
+				<a href="https://kotn.com/collections/womens-bottoms" target="_blank"> <img class="img-fluid" src="images/jeans3.png" alt="" width="300" height="600"> </a>
 				<h5>KOTN</h5>
 				<h4> Designed in Canada, ethically and sustainably made in the Nile Delta. Shop quality basics from 100% Egyptian cotton. Every purchase funds new schools 
 				</h4>
@@ -125,9 +124,7 @@
 		</div>
 		</div>
 		</div>
-			
 		<div class="col-md-12 col-lg-12"><br></div>
-		
 		<div class="the-container">
 		<div class="container">
         <div class="row"> 
@@ -136,9 +133,7 @@
 			</div>
 		</div>
 		</div>
-		</div>
-		<div class="col-md-12 col-lg-12"><br></div>
-			
+		</div>			
 		<div class="col-md-12 col-lg-12"><br></div>
 		<div class="my-container">
 		<div class="container">
@@ -146,7 +141,7 @@
 				<div class="col-md-4 col-lg-4">
 			<article class="green">
 				<h3> €5-€25</h3>
-				<h4> <a href="https://wearpact.com/women/apparel/dresses%20&%20skirts" target="_blank"> <img class="img-fluid" src="images/dress1.png" alt="" width="500" height="150"> </a> </h4>
+				<a href="https://wearpact.com/women/apparel/dresses%20&%20skirts" target="_blank"> <img class="img-fluid" src="images/dress1.png" alt="" width="500" height="150"> </a>
 				<h5> Pact </h5>
 				<h4> Pacts partners with Fair Trade Certified™ factories because they ensure care for both people and planet. Fair Trade factories provide safe working conditions, empower and uplift local communities, and protect the environment. in addition all the cotton is organic </h4>
 			</article>
@@ -154,7 +149,7 @@
 			<div class="col-md-4 col-lg-4">
 			<article class="green">
 				<h3>€25-€50 </h3>
-				<h4> <a href="https://tentree.co.uk/collections/womens-dresses-rompers" target="_blank"> <img class="img-fluid" src="images/dress4.png" alt="" width="500" height="150"> </a> </h4>
+				<a href="https://tentree.co.uk/collections/womens-dresses-rompers" target="_blank"> <img class="img-fluid" src="images/dress4.png" alt="" width="500" height="150"> </a>
 				<h5> Tentree </h5> 
 				<h4> With tentree, every purchase which is made they plant 10 trees. By planting trees for every purchase, they're making a big change accessible to everybody and showing the lasting impact that one small choice can have </h4>
 			</article>
@@ -162,7 +157,7 @@
 			<div class="col-md-4 col-lg-4">
 			<article class="green">
 				<h3> €50 + </h3>
-				<h4> <a href="https://www.prana.com/women/dresses-skirts.html" target="_blank"> <img class="img-fluid" src="images/dress3.png" alt="" width="500" height="150"> </a> </h4>
+				<a href="https://www.prana.com/women/dresses-skirts.html" target="_blank"> <img class="img-fluid" src="images/dress3.png" alt="" width="500" height="150"> </a>
 				<h5> Prana </h5> 
 				<h4> Prana have a thought and that is 'sustainability is part of our DNA.' theyr ultimate goal is to inspire, educate and outfit the adventures of people with sustainable clothes.
 				</h4> 
@@ -190,7 +185,7 @@
 			<div class="col-md-4 col-lg-4">
 			<article class="green">
 				<h3>€5-€25</h3>
-				<h4> <a href="https://www.green-shirts.com/en/men/t-shirts/?p=1 " target="_blank"> <img class="img-fluid" src="images/shirt1.png" alt="" width="150" height="100"> </a> </h4>
+				<a href="https://www.green-shirts.com/en/men/t-shirts/?p=1 " target="_blank"> <img class="img-fluid" src="images/shirt1.png" alt="" width="400" height="200"> </a>
 				<h5>Green shirts </h5> 
 				<h4> Social Eco Wear by Green Shirts A dedicated team of international fashion designer, product developer combined with a CEO with a great vision. That makes GREEN SHIRTS to one of the rising stars of sustainable Fashion's industry. </h4>
 			</article>
@@ -198,7 +193,7 @@
 			<div class="col-md-4 col-lg-4">
 			<article class="green">
 				<h3> €25-€50</h3>
-				<h4> <a href="https://wearpact.com/women/apparel/tops%20&%20shirts " target="_blank"> <img class="img-fluid" src="images/shirt2.png" alt="" width="150" height="100"> </a> </h4>
+				<a href="https://wearpact.com/women/apparel/tops%20&%20shirts " target="_blank"> <img class="img-fluid" src="images/shirt2.png" alt="" width="400" height="200"> </a>
 				<h5> Pact </h5>
 				<h4> Pacts partners with Fair Trade Certified™ factories because they ensure care for both people and planet. Fair Trade factories provide safe working conditions, empower and uplift local communities, and protect the environment. in addition all the cotton is organic 
 				</h4>
@@ -207,7 +202,7 @@
 			<div class="col-md-4 col-lg-4">
 			<article class="green">
 				<h3> €50 +</h3>
-				<h4> <a href="https://colorfulstandard.com/collections/colorful-standard/Crewneck+Male?gclid=CjwKCAjwxuuCBhATEiwAIIIz0Z8uFb9h1ADqS5MJQ0VzlbVpYUEU2Mxyon_1aGugDKRVv5kvvAm90RoCPMQQAvD_BwE " target="_blank"> <img class="img-fluid" src="images/shirt3.png" alt="" width="150" height="100"> </a> </h4>
+				<a href="https://colorfulstandard.com/collections/colorful-standard/Crewneck+Male?gclid=CjwKCAjwxuuCBhATEiwAIIIz0Z8uFb9h1ADqS5MJQ0VzlbVpYUEU2Mxyon_1aGugDKRVv5kvvAm90RoCPMQQAvD_BwE " target="_blank"> <img class="img-fluid" src="images/shirt3.png" alt="" width="400" height="200"> </a>
 				<h5> Colorful Standard </h5>
 				<h4> All our garments are made from 100% Organic Cotton, which means cotton that is grown without genetically modified seeds. All our accessories are made from 100% Italian Extra Fine Merino Wool.
 				</h4>
