--- a/123456.html
+++ b/123456.html
@@ -88,7 +88,7 @@
 			<div class="col-md-4 col-lg-4">
 			<article class="green">
 				<h3>€5-€25</h3>
-				<a href="https://www.vinted.nl/vetements?search_text=sustainable%20jeans/" target="_blank"> <img class="img-fluid" src="images/jeans1.png" alt="" width="400" height="200"></a>
+				<a href="https://www.etsy.com/market/used_dinnerware?awc=9208_1616774702_656d7d6b4a034da7daf8130f0cc6cd76&zanpid=9208_1616774702_656d7d6b4a034da7daf8130f0cc6cd76&utm_medium=affiliate&utm_source=affiliate_window&utm_campaign=nl_buyer&utm_content=136348&utm_term=89179 " target="_blank"> <img class="img-fluid" src="images/table1.jpg"  alt="" width="400" height="200"></a>
 				<h5>Etsy</h5>
 				<h4> <!-- Information --></h4>
 			</article>
@@ -96,7 +96,7 @@
 			<div class="col-md-4 col-lg-4">
 			<article class="green">
 				<h3>€25-€50</h3>
-				<a href="https://www.na-kd.com/nl/zoek-producten/organisch-rechte-high-waist-jeans-blauw-9?utm_source=google&utm_medium=cpc&utm_campaign=NL_%7Bifmobile:MB%7D%7Bifnotmobile:DT%7D_SEA_GGL_SHP_ALL_NBR_X_X_X_a*499-802-0213_c*%7Bcampaignname%7D_g*%7Badgroupname%7D_k*1660-000122-0003-582&dfw_tracker=30165-782678&gclid=CjwKCAjwxuuCBhATEiwAIIIz0dEV5BDsf4oUTEFxxX3gyxkLYBjpkLnBEbx2jr6ltOd6Kp_P3qIhtBoCnfoQAvD_BwE" target="_blank"> <img class="img-fluid" src="images/jeans2.png" alt="" width="300" height="600"> </a>
+				<a href="https://www.newly.com/collections/glassware" target="_blank"> <img class="img-fluid" src="images/table2.png" alt="" width="300" height="600"> </a>
 				<h5>Newly</h5>
 				<h4><!-- Information --></h4>
 				</article>
@@ -104,7 +104,7 @@
 			<div class="col-md-4 col-lg-4">
 			<article class="green">
 				<h3> €50+ </h3>
-				<a href="https://kotn.com/collections/womens-bottoms" target="_blank"> <img class="img-fluid" src="images/jeans3.png" alt="" width="300" height="600"> </a>
+				 <a href="https://eastfork.com/?sscid=31k5_r1zzr&" target="_blank"> <img class="img-fluid" src="images/table3.png" alt="" width="300" height="600"> </a>
 				<h5>East Fork</h5>
 				<h4><!-- Information --></h4>
 			</article>
@@ -129,7 +129,7 @@
 				<div class="col-md-4 col-lg-4">
 			<article class="green">
 				<h3> €5-€25</h3>
-				<a href="https://wearpact.com/women/apparel/dresses%20&%20skirts" target="_blank"> <img class="img-fluid" src="images/dress1.png" alt="" width="500" height="150"> </a>
+				<a href="https://www.grove.co/home/" target="_blank"> <img class="img-fluid" src="images/clean1.png" alt="" width="500" height="150"> </a>
 				<h5> Grove </h5>
 				<h4> <!-- Information --> </h4>
 			</article>
@@ -137,7 +137,7 @@
 			<div class="col-md-4 col-lg-4">
 			<article class="green">
 				<h3>€25-€50 </h3>
-				<a href="https://tentree.co.uk/collections/womens-dresses-rompers" target="_blank"> <img class="img-fluid" src="images/dress4.png" alt="" width="500" height="150"> </a>
+				<a href="https://www.commongoodandco.com/collections/all" target="_blank"> <img class="img-fluid" src="images/clean2.png" alt="" width="500" height="150"> </a>
 				<h5> Common Good </h5> 
 				<h4> <!-- Information --> </h4>
 			</article>
@@ -145,7 +145,7 @@
 			<div class="col-md-4 col-lg-4">
 			<article class="green">
 				<h3> €50 + </h3>
-				<a href="https://www.prana.com/women/dresses-skirts.html" target="_blank"> <img class="img-fluid" src="images/dress3.png" alt="" width="500" height="150"> </a>
+				<a href="https://shoppurhome.com" target="_blank"> <img class="img-fluid" src="images/clean3.jpg" alt="" width="500" height="150"> </a>
 				<h5> Pur Home </h5> 
 				<h4><!-- Information --></h4> 
 			</article>
@@ -172,7 +172,7 @@
 			<div class="col-md-4 col-lg-4">
 			<article class="green">
 				<h3>€5-€25</h3>
-				<a href="https://www.green-shirts.com/en/men/t-shirts/?p=1 " target="_blank"> <img class="img-fluid" src="images/shirt1.png" alt="" width="400" height="200"> </a>
+				<a href="https://www.etsy.com/market/reclaimed_furniture?awc=9208_1616947189_c3b0320e12265e5f504a21b8fd7ada73&zanpid=9208_1616947189_c3b0320e12265e5f504a21b8fd7ada73&utm_medium=affiliate&utm_source=affiliate_window&utm_campaign=nl_buyer&utm_content=136348&utm_term=89179" target="_blank"> <img class="img-fluid" src="images/home1.png" alt="" width="400" height="200"> </a>
 				<h5>Etsy</h5> 
 				<h4> <!-- Information --></h4>
 			</article>
@@ -180,7 +180,7 @@
 			<div class="col-md-4 col-lg-4">
 			<article class="green">
 				<h3> €25-€50</h3>
-				<a href="https://wearpact.com/women/apparel/tops%20&%20shirts " target="_blank"> <img class="img-fluid" src="images/shirt2.png" alt="" width="400" height="200"> </a>
+				<a href="https://joybird.com" target="_blank"> <img class="img-fluid" src="images/home2.png" alt="" width="400" height="200"> </a>
 				<h5> Joybird </h5>
 				<h4><!-- Information --></h4>
 			</article>
@@ -188,7 +188,7 @@
 			<div class="col-md-4 col-lg-4">
 			<article class="green">
 				<h3> €50 +</h3>
-				<a href="https://colorfulstandard.com/collections/colorful-standard/Crewneck+Male?gclid=CjwKCAjwxuuCBhATEiwAIIIz0Z8uFb9h1ADqS5MJQ0VzlbVpYUEU2Mxyon_1aGugDKRVv5kvvAm90RoCPMQQAvD_BwE " target="_blank"> <img class="img-fluid" src="images/shirt3.png" alt="" width="400" height="200"> </a>
+				<a href="https://www.avocadogreenmattress.com/collections/furniture?irclickid=T-5VTEU6HxyLTjL0M-0V7wD0UkEXGfx0CRF%3ASE0&irgwc=1&utm_medium=affiliate&utm_source=impact&utm_campaign=1810803&ar_clx=yes&ar_channel=impact&ar_campaign=affiliate&ar_adgroup=%7Bpublisher_id%7D&ar_ad=%7Bad_id%7D&ar_strategy=aff" target="_blank"> <img class="img-fluid" src="images/home3.jpg" alt="" width="400" height="200"> </a>
 				<h5> Avocado </h5>
 				<h4><!-- Information --></h4>
 			</article>
